--- a/SalesWeb/appsettings.json
+++ b/SalesWeb/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebContext-e9cf1efb-54c2-4c42-9d1a-4ebe2b989813;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
