MySQL adaptation and first migration

--- a/SalesWeb/appsettings.json
+++ b/SalesWeb/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebContext-e9cf1efb-54c2-4c42-9d1a-4ebe2b989813;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebContext": "server=localhost;userid=developer;password=Kau&5212;database=saleswebappdb"
   }
 }
